// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WatchCases basic-type-error 1`] = `
Object {
  "errors": Array [
    "xfile
(1,7): error TS2322: Type '\\"test\\"' is not assignable to type 'number'.
",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases basic-type-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases basic-type-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases basic-type-no-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-error 1`] = `
Object {
  "errors": Array [
    "xfile
(3,20): error TS2339: Property 'test' does not exist on type 'typeof \\"xfile'.
",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-no-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-removal-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-removal-no-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases file-removal-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases file-removal-no-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ignore-child-compiler-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ignore-child-compiler-no-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-error 2`] = `
Object {
  "errors": Array [
    "xfile
(1,22): error TS2306: File 'xfile' is not a module.
",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-error 3`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-removal-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-removal-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-removal-error 3`] = `
Object {
  "errors": Array [
    "xfile
(1,22): error TS2307: Cannot find module 'xfile'.
",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases tslint-error 1`] = `
Object {
  "errors": Array [
    "xfile
' should be \\"",
    "xfile
' should be \\"",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases tslint-error 2`] = `
Object {
  "errors": Array [
    "xfile
' should be \\"",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases tslint-error 3`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases tslint-warning 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [
    "xfile
' should be \\"",
    "xfile
' should be \\"",
  ],
}
`;

exports[`WatchCases tslint-warning 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [
    "xfile
' should be \\"",
  ],
}
`;

exports[`WatchCases tslint-warning 3`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases type-patches-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases type-patches-error 2`] = `
Object {
  "errors": Array [
    "xfile
(1,22): error TS2307: Cannot find module 'xfile'.
",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases type-patches-error 3`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;
